--- a/roles/wireguard/templates/wg.conf.j2
+++ b/roles/wireguard/templates/wg.conf.j2
@@ -1,14 +1,14 @@
 [Interface]
-Address = {{ private_ip }}
-PrivateKey = {{ private_key }}
+Address = {{ wireguard_private_ip }}
+PrivateKey = {{ wireguard_private_key }}
 ListenPort = 51820
 
-{% for item in groups['wireguard'] %}
+{% for item in groups['all'] %}
 {% if item != inventory_hostname %}
 [Peer]
-PublicKey = {{ hostvars[item]['public_key'] }}
-AllowedIps = {{ hostvars[item]['private_ip'] }}/32
-Endpoint = {{ hostvars[item]['ansible_default_ipv4']['address'] }}:51820
+PublicKey = {{ hostvars[item]['wireguard_public_key'] }}
+AllowedIps = {{ hostvars[item]['wireguard_private_ip'] }}/32
+Endpoint = {{ hostvars[item]['ansible_host'] }}:51820
 
 {% endif %}
 {% endfor %}
