--- a/roles/master-proxy/templates/master-proxy.yml.j2
+++ b/roles/master-proxy/templates/master-proxy.yml.j2
@@ -6,6 +6,7 @@ metadata:
   labels:
     name: master-proxy
 spec:
+  priorityClassName: system-node-critical
   hostNetwork: true
   containers:
     - name: forwarder
