--- a/roles/node/templates/kube-proxy.yml.j2
+++ b/roles/node/templates/kube-proxy.yml.j2
@@ -6,6 +6,7 @@ metadata:
   labels:
     name: kube-proxy
 spec:
+  priorityClassName: system-node-critical
   hostNetwork: true
   containers:
     - name: kube-proxy
