--- a/roles/node/templates/kubelet.service.j2
+++ b/roles/node/templates/kubelet.service.j2
@@ -25,7 +25,7 @@ ExecStart=/bin/sh -c '/usr/local/bin/kubelet \
   --tls-cert-file=/etc/kubelet/kubelet.pem \
   --tls-private-key-file=/etc/kubelet/kubelet-key.pem \
   --network-plugin=cni \
-  --node-ip={{ wireguard_private_ip }} \
+  --node-ip={{ ansible_host }} \
   --max-open-files={{ kubelet_max_open_files | int }} \
   --max-pods={{ kubelet_max_pods | int }} \
   --kube-reserved={{ kubelet_kube_reserved }} \
@@ -36,6 +36,8 @@ ExecStart=/bin/sh -c '/usr/local/bin/kubelet \
   --feature-gates={{ feature_gates }} \
   --read-only-port=0 \
   --protect-kernel-defaults=true \
+  --cgroup-driver=systemd \
+  --volume-plugin-dir=/var/lib/kubelet/volumeplugins \
   2>&1 | tee -a /var/log/kubelet.log '
 Restart=on-failure
 ResetSec=5
