--- a/roles/node/templates/kube-proxy.yml.j2
+++ b/roles/node/templates/kube-proxy.yml.j2
@@ -16,7 +16,7 @@ spec:
       args:
         - /usr/local/bin/kube-proxy
         - --feature-gates={{ feature_gates }}
-        - --hostname-override={{ ansible_host }}
+        - --hostname-override={{ ansible_hostname }}
         - --config=/etc/kube-proxy/config
         - --logtostderr=true
       env:
