--- a/roles/node/templates/kubelet.service.j2
+++ b/roles/node/templates/kubelet.service.j2
@@ -37,6 +37,7 @@ ExecStart=/bin/sh -c '/opt/bin/kubelet \
   --read-only-port=0 \
   --protect-kernel-defaults=true \
   --volume-plugin-dir=/var/lib/kubelet/volumeplugins \
+  --cpu-cfs-quota=false \
   2>&1 | tee -a /var/log/kubelet.log '
 Restart=on-failure
 ResetSec=5
