--- a/roles/node/templates/kube-proxy.yml.j2
+++ b/roles/node/templates/kube-proxy.yml.j2
@@ -18,6 +18,7 @@ spec:
         - --feature-gates={{ feature_gates }}
         - --hostname-override={{ wireguard_private_ip }}
         - --config=/etc/kube-proxy/config
+        - --proxy-mode=ipvs
         - --logtostderr=true
       env:
         - name: CONFIG_HASH
