use sed (shortest expected delay) as the ipvs scheduler

--- a/roles/node/templates/kube-proxy.yml.j2
+++ b/roles/node/templates/kube-proxy.yml.j2
@@ -19,6 +19,7 @@ spec:
         - --hostname-override={{ wireguard_private_ip }}
         - --config=/etc/kube-proxy/config
         - --proxy-mode=ipvs
+        - --ipvs-scheduler=sed
         - --logtostderr=true
       env:
         - name: CONFIG_HASH
