--- a/roles/master/templates/master.yml.j2
+++ b/roles/master/templates/master.yml.j2
@@ -49,6 +49,7 @@ spec:
         - --max-requests-inflight={{ apiserver_max_requests_inflight | int }}
         - --max-mutating-requests-inflight={{ apiserver_max_mutating_requests_inflight | int }}
         - --feature-gates={{ feature_gates }}
+        - --enable-admission-plugins=AlwaysPullImages
         - --service-node-port-range={{ service_node_port_range }}
       env:
         - name: CONFIG_HASH
