--- a/roles/node/templates/kubelet.service.j2
+++ b/roles/node/templates/kubelet.service.j2
@@ -25,7 +25,7 @@ ExecStart=/bin/sh -c '/opt/bin/kubelet \
   --tls-cert-file=/etc/kubelet/kubelet.pem \
   --tls-private-key-file=/etc/kubelet/kubelet-key.pem \
   --network-plugin=cni \
-  --node-ip={{ ansible_host }} \
+  --node-ip={{ network.internalIP }} \
   --max-open-files={{ kubelet_max_open_files | int }} \
   --max-pods={{ kubelet_max_pods | int }} \
   --kube-reserved={{ kubelet_kube_reserved }} \
